<resources>
    <string name="app_name">Voyager</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="oldPass">Old password</string>
    <string name="pass">Password</string>
    <string name="pass_confirm">Password confirmation</string>
    <string name="register">Register</string>
    <string name="change_password">Change password</string>
    <string name="non_unique_field">This field must be unique.</string>
    <string name="user_with_this_email_already_exists">User with this email already exists</string>
    <string name="account_created">Your account has been created</string>
    <string name="login">Login</string>
    <string name="login_error">Wrong email or password!</string>
    <string name="logged_in">Your are logged in</string>
    <string name="auto_logged_out">You have been automatically logged out. To continue using the application, log in again</string>
    <string name="new_to_voyager">New to Voyager?</string>
    <string name="create_an_account">Create an account</string>
    <string name="server_error">Server error occurred. Try again later</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_hotels">Hotel recommendation</string>
    <string name="navigation_drawer_account">My account</string>
    <string name="navigation_drawer_reviews">My reviews</string>
    <string name="navigation_drawer_log_out">Log out</string>

    <string name="search_fragment_title">Let us find the best hotels\njust for you!</string>
    <string name="search_by_city">Type city… (optional)</string>
    <string name="no_recommendations">Number of recommendations</string>
    <string name="let_s_voyage">LET\'S VOYAGE!</string>
    <string name="hotel_name">Hotel name</string>
    <string name="reviews">reviews</string>
    <string name="city">City</string>
    <string name="categories">Categories</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="recomm_desc">Most recommended</string>
    <string name="recomm_asc">Least recommended</string>
    <string name="rating_descending">Best users\' rating</string>
    <string name="rating_ascending">Worst users\' rating</string>
    <string name="stars_descending">Best rating</string>
    <string name="stars_ascending">Worst rating</string>
    <string name="reviews_num_desc">Reviews number (descending)</string>
    <string name="reviews_num_asc">Reviews number (ascending)</string>
    <string name="date_num_desc">Newest</string>
    <string name="date_num_asc">Oldest</string>
    <string name="rating_3">Rating: at least 3.0</string>
    <string name="rating_4">Rating: at least 4.0</string>
    <string name="reviews_100">Reviews: at least 100</string>
    <string name="reviews_1000">Reviews: at least 1000</string>
    <string-array name="filter_options">
        <item>@string/rating_3</item>
        <item>@string/rating_4</item>
        <item>@string/reviews_100</item>
        <item>@string/reviews_1000</item>
    </string-array>

    <string name="cityState">"%1s, %2s %3s"</string>
    <string name="attrName">"%1s:"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>