<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_hotels"
            android:icon="@drawable/ic_baseline_hotel_24"
            android:title="@string/navigation_drawer_hotels"/>
        <item android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/navigation_drawer_account"/>
        <item android:id="@+id/nav_reviews"
            android:icon="@drawable/ic_baseline_reviews_24"
            android:title="@string/navigation_drawer_reviews"/>
        <item android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/navigation_drawer_log_out"/>
    </group>
</menu>